Closed Bug 950923 Opened 10 years ago Closed 10 years ago

Fix an exact rooting hazard in getIntrinsiceValue

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: terrence, Assigned: terrence)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Bug 785905 introduced a new hazard in getIntrinsicValue. I think it makes the most sense to just make the method static since it can GC and all the callers are handles already.
Attachment #8348343 - Flags: review?(sphink)
Comment on attachment 8348343 [details] [diff] [review]
hazard_getIntrinsicValue-v0.diff

Review of attachment 8348343 [details] [diff] [review]:
-----------------------------------------------------------------

lgtm
Attachment #8348343 - Flags: review?(sphink) → review+
https://hg.mozilla.org/mozilla-central/rev/a3177e1d28a3
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: