Bug 950923 - Fix an exact rooting hazard in GlobalObject::getIntrinsicValue; r=sfink

--HG--
extra : rebase_source : f49223dbfb97147d43bbf3720098b97e516c406a